# OpenSplitDeck

./: LICENSE  README.md
CAD/Connector Halves/: Left Controller v3 Bottom.stl  Left Controller v3 Top.stl  Right Controller v3 Bottom.stl  Right Controller v3 Top.stl
CAD/Dongle Case/: Bottom Dongle Case 2.stl  Bottom Dongle Case.stl  Top Dongle Case.stl
CAD/Old/sudoPCB/: Fake PCB LCD Trackpad Left.stl  Fake PCB LCD Trackpad Right.stl  (+1 more)
CAD/STEP/: SteamdeckCuttingJig v46.step
CAD/TODO 3D Printable Case/: Right Bumper experimental.stl
CAD/Trackpad Spring/: Trackpad Spring.stl
CAD/cutting jig/: Bottom Left.stl  Bottom Right.stl  Top Left.stl  Top Right.stl
CAD/sudoPCB/: Fake PCB Oled Trackpad Left.stl
firmware/controller/: CMakeLists.txt  controller.ino  prj.conf  sample.yaml  xiao_ble_nrf52840_sense.overlay
firmware/controller/src/: IQS7211E.c  IQS7211E.h  IQS7211E_init.h  analog_driver.c  analog_driver.h  button_driver.c  button_driver.h  controller_storage.c  controller_storage.h  display.c  display.h  drv2605.c  drv2605.h  esb_comm_driver.c  esb_comm_driver.h  haptic_driver.c  haptic_driver.h  i2c_arduino.c  i2c_arduino.h  imu_driver.c  imu_driver.h  main.c  power_mgmt_driver.c  power_mgmt_driver.h  trackpad_driver.c  trackpad_driver.h  ui_Images.h
firmware/controller/src/IQS7211E/: IQS7211E.cpp  IQS7211E.h
firmware/controller/src/IQS7211E/inc/: iqs7211e_addresses.h
firmware/dongle/: dongle.ino
firmware/hid-custom/: CMakeLists.txt  prj.conf  xiao_ble_nrf52840.overlay
hardware/: README.md
hardware/trackpad/: README.md
(+6 files in other folders)
